--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@microsoft/clarity": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,9 +26,11 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
