--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.4",
     "@microsoft/clarity": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -23,11 +24,13 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.10.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
